@@ -23,6 +23,13 @@ Support for the `cast` & `declare` command as the executable name has been
 dropped; only the `explain` command is still supported.  (I didn't realize
 until now that `declare` conflicts with the shell built-in.)`
 
+** Cast to `typedef`
+Casting to a `typedef`d type is fixed:
+
+    cdecl> typedef int T
+    cdecl> cast x into T
+    (T)x
+
 ** C99 language extensions
 Fixed printing of C99 language extention names.
 
